Log, statistic controller 오류 수정 및 api docs 작성
